--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-.DS_Store
+/.idea/
 /build
 /captures
 .externalNativeBuild
