--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,8 @@ core-constraintlayout = "androidx.constraintlayout:constraintlayout:2.1.4"
 core-java8 = "com.android.tools:desugar_jdk_libs:1.1.5"
 core-material = "com.google.android.material:material:1.6.1"
 core-splashscreen = "androidx.core:core-splashscreen:1.0.0"
+# Coil
+coil = "io.coil-kt:coil-compose:2.2.2"
 # Compose
 compose-activity = "androidx.activity:activity-compose:1.6.0"
 compose-constraintlayout = "androidx.activity:activity-compose:1.6.0"
