--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist = "0.25.1"
-compose = "1.2.1"
+compose = "1.3.1"
 compose-compiler = "1.3.2"
 kotlin = "1.7.20"
 ktor = "2.1.1"
@@ -14,7 +14,7 @@ accompanist-refresh = { module = "com.google.accompanist:accompanist-swiperefres
 accompanist-placeholder = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanist" }
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
 # Appyx Navigation
-appyx = "com.bumble.appyx:core:1.0-alpha09"
+appyx = "com.bumble.appyx:core:1.0.0"
 # Core
 core = "androidx.core:core-ktx:1.9.0"
 core-appcompat = "androidx.appcompat:appcompat:1.5.1"
