--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-accompanist = "0.25.1"
+accompanist = "0.28.0"
 compose = "1.3.1"
-compose-compiler = "1.3.2"
-kotlin = "1.7.20"
-ktor = "2.1.1"
-lifecycle = "2.6.0-alpha02"
-room = "2.4.3"
+compose-compiler = "1.4.2"
+gradlePlugin = "7.4.1"
+kotlin = "1.8.10"
+ktor = "2.2.3"
+lifecycle = "2.5.1"
 
 [libraries]
 # Accompanist
@@ -14,35 +14,37 @@ accompanist-refresh = { module = "com.google.accompanist:accompanist-swiperefres
 accompanist-placeholder = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanist" }
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
 # Appyx Navigation
-appyx = "com.bumble.appyx:core:1.0.0"
+appyx = "com.bumble.appyx:core:1.0.3"
 # Core
 core = "androidx.core:core-ktx:1.9.0"
-core-appcompat = "androidx.appcompat:appcompat:1.5.1"
+core-appcompat = "androidx.appcompat:appcompat:1.6.1"
 core-constraintlayout = "androidx.constraintlayout:constraintlayout:2.1.4"
-core-java8 = "com.android.tools:desugar_jdk_libs:1.1.5"
-core-material = "com.google.android.material:material:1.6.1"
+core-java8 = "com.android.tools:desugar_jdk_libs:2.0.2"
+core-material = "com.google.android.material:material:1.8.0"
 core-splashscreen = "androidx.core:core-splashscreen:1.0.0"
 # Coil
 coil = "io.coil-kt:coil-compose:2.2.2"
 # Compose
-compose-activity = "androidx.activity:activity-compose:1.6.0"
-compose-constraintlayout = "androidx.activity:activity-compose:1.6.0"
+compose-activity = "androidx.activity:activity-compose:1.6.1"
+compose-constraintlayout = "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
 compose-material-icons = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 compose-ui-test-junit = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
+# Preferences Datastore
+datastore = "androidx.datastore:datastore-preferences:1.1.0-alpha01"
 # JUnit
 junit4 = "junit:junit:4.13.2"
-junit4-androidx = "androidx.test.ext:junit:1.1.3"
+junit4-androidx = "androidx.test.ext:junit:1.1.5"
 # Kotlinx Coroutines
 kotlinx-coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
 # Kotlinx Immutable
 kotlinx-immutable = "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
 # Kotlinx Serialization
 kotlinx-serialization-ktor = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
-kotlinx-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
+kotlinx-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
 # Ktor
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
@@ -55,5 +57,9 @@ lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", v
 lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 # Napier
 napier = "io.github.aakira:napier:2.6.1"
-# Preferences Datastore
-datastore = "androidx.datastore:datastore-preferences:1.0.0"
+
+[plugins]
+android-application = { id = "com.android.application", version.ref = "gradlePlugin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
